--- a/Projects/01-hola-mundo/src/FollowCard.css
+++ b/Projects/01-hola-mundo/src/FollowCard.css
@@ -1,32 +1,32 @@
-article {
+.followCard {
   display: flex;
   align-items: center;
   color: #fff;
   font-size: 0.8rem;
 }
 
-article header {
+.followCard-header {
   display: flex;
   align-items: center;
   gap: 4px;
 }
 
-article header div {
+.followCard-info {
   display: flex;
   flex-direction: column;
 }
 
-article header span {
+.followCard-usrname {
   opacity: 0.6;
 }
 
-article img {
+.followCard-avatar {
   width: 48px;
   height: 48px;
   border-radius: 1000px;
 }
 
-article button {
+.followCard-followButton {
   margin-left: 16px;
   border: 0;
   border-radius: 999px;
