--- a/Projects/01-hola-mundo/src/App.css
+++ b/Projects/01-hola-mundo/src/App.css
@@ -3,6 +3,7 @@
   align-items: center;
   color: #fff;
   font-size: 0.8rem;
+  justify-content: space-between;
 }
 
 .followCard-header {
@@ -27,9 +28,15 @@
 }
 
 .followCard-followButton {
+  cursor: pointer;
   margin-left: 16px;
   border: 0;
   border-radius: 999px;
   padding: 6px 16px;
   font-weight: bold;
+}
+
+.followCard-followButton:hover {
+  background-color: mediumblue;
+  transition: 0.1s ease background-color;
 }
